--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,114 +1,108 @@
-body { 
-    color: #8A8A8A;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
 
-h1 {
-    text-align: center;
-    font-size: 150px; 
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-h2 {
-    text-align: center;
-    font-size: 65px; 
-}
 
-h3 {
-    text-align: center;
-    font-size: 30 px; 
-}
-
-nav {
-    display: flex;
-    background-color: #5b8df2;
-    padding: 8px;
-    justify-content: space-between;
-    align-items: left;
-}
-nav li a {
-    color: white;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     text-decoration: none;
+    font-family: 'Poppins', sans-serif;
+}
+/* variables */
+:root {
+    
 }
 
-nav li {
+
+header {
+    width: 100%;
+    height: 100px;
+    position: fixed;
+    z-index: 100;
+}
+
+.container__header {
+    max-width: 1200 px;
+    height: 100%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 20px;
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    position: relative;
+    z-index: 1;
+}
+
+.logo img {
+    width: 200 px;
+    height: 80px;
+    border-radius: 30%;
+}
+
+.menu {
+    display: flex;
+    align-items: center;
+}
+
+.menu nav {
+    margin: 0px 20px;
+    padding: 8px;
+}
+
+.menu nav ul {
+    display: flex;
+}
+
+.menu nav ul li {
     list-style: none;
+    margin: 10px 16px;
     padding: 20px;
 }
 
-nav ul {
-    display: flex;
-}
-
-#logo {
-    height: 80px;
-    border-radius: 30%;
- }
-
-.logo-redes {
-    height: 40px;
-
-} 
-
-.div-logo-redes {
-    text-align: center;
-}
-
-.claseh1 {
-    margin-top: -1px;
-}
-
-.claseh2 {
-    margin-top: -100px;
-}
-
-.claseh3 {
-    margin-top: -35px;
-}
-
-.grilla-superior {
-    display: grid;
-    grid-gap:50px;
+.menu nav li a {
+    color: black;  /* variable */
+    font-size: 16px; /* variable */
+    position: relative;
 
 }
 
-.columna-1 {
-    grid-column-start: 1;
-    grid-column-end: 2;
+.menu nav li a:hover {
+    color: brown; /* variable */
 }
 
-.columna-2 {
-    grid-column-start: 2;
-    grid-column-end: 3;
+.btn__cotizar {
+    display: block;
+    padding: 8px 40px;
+    border: 2px solid #9a00bf; /* variable */
+    border-radius: 8px;
+    font-weight: 500;
+    margin: 0px 20px;
+    transition: all 300ms;
+}
+.btn__cotizar:hover {
+    color: white;
+    background: #9a00bf; /* variable */
 }
 
-.foto-grilla-superior {
-    height: 400px;
+.menu .div-logo-redes {
+    margin: 0px 10px ;
 }
 
-.grilla-conocimientos-programacion {
-    display: grid;
-    grid-gap:10px;
-    text-align: center;
-    background-color: coral;     
-
+.menu .div-logo-redes a {
+    margin: 0px 10px ;
 }
 
-.col-1-conocimientos-programacion {
-    grid-column-start: 1;
-    grid-column-end: 2;
+.menu .div-logo-redes img {
+    width: 40px;
 }
 
-.col-2-conocimientos-programacion {
-    grid-column-start: 2;
-    grid-column-end: 3;
-}
 
-.col-3-conocimientos-programacion {
-    grid-column-start: 3;
-    grid-column-end: 4;
-}
 
-.foto-conocimientos-programacion {
-    height: 200px;
-      
-}
+
+
